feat: Add Razorpay Standard Checkout for direct payment from frontend (no backend needed)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pop and Fun - Your Fun Shopping Destination</title>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <meta name="description" content="Shop smart and live colorful with Pop and Fun. Discover amazing deals on electronics, fashion, toys, and more!">
     <meta name="author" content="Pop and Fun" />
 
